--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id"
+        content="65224485945-p4j4p9fov31nq054pvvitrrstuj8t1so.apps.googleusercontent.com">
     <link rel="stylesheet" href="style.css">
     <title>Demo tesis</title>
 </head>
+
 <body>
 
     <h1>Bloqueado</h1>
-    
+    <hr>
+
+    <h1>Google singIn</h1>
+
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+    <a href="#" onclick="signOut();">Sign out</a>
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+    <script>
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log('User signed out.');
+            });
+        }
+    </script>
+
+    <script>
+        var url = (window.location.hostname.includes('localhost'))
+            ? 'http://localhost:8080/api/auth/google'
+            : 'https://api2112-tesis.herokuapp.com/api/auth/google';
+
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+            var id_token = googleUser.getAuthResponse().id_token;
+
+            const data = { id_token }
+            fetch(url, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(data)
+            }).then(resp => resp.json())
+                .then(data => console.log('Nuestro server', data))
+                .catch(console.log);
+        }
+    </script>
+
 </body>
+
 </html>
